# mmengine-config

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint.yml  test.yml
mme/: __init__.py
mme/config/: config.py  lazy.py  utils.py
tests/data/config/lazy_module_config/: test_ast_transform.py  test_base.py  test_change_base_var.py  test_inheritance.py  toy_model.py
tests/data/config/py_config/: test_base_variables.py  test_base_variables_nested.py  test_merge_from_multiple_bases.py  test_merge_from_multiple_error.py  test_py_base.py
tests/test_config/: test_base_modification.py  test_collect_meta.py  test_config_legacy.py  test_inheritance.py  test_lazy.py  test_nested_config.py
