[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mmengine-config"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "MMEngine Authors", email = "openmmlab@gmail.com" },
    { name = "Wenyi Tang", email = "wenyitang@outlook.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
description = "Only config component from mmengine."
dependencies = ["addict", "black", "rich"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "mme.__version__"}

[project.urls]
Home = "https://github.com/llteco/mmengine"
Doc = "https://mmengine.readthedocs.io/en/latest/"

[tool.pyright]
include = ["mme"]

[tool.flake8]
ignore = ['E231', 'E241', 'W503']
per-file-ignores = ['__init__.py:F401']
max-line-length = 88
max-complexity = 20
count = true

[tool.isort]
profile = "black"
skip_glob = []

[tool.pylint."MAIN"]
ignore-paths = []

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "no-member",
    "no-name-in-module",
    "fixme",
    "R",
    "I",
]

[tool.mypy]
disable_error_code = ["assignment", "import-untyped", "return-value", "return"]
exclude = []
